--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,59 +1,33 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-<head>
-    <meta charset="utf-8">
-    <title>
-        {% if page.title %} {{ page.title }}
-        {% else %} {{ site.name }} &mdash; {{ site.description }}
-        {% endif %}
-    </title>
+  {% include head.html %}
 
-    <meta name="robots" content="index,follow">
-    <meta name="revisit-after" content="1 days">
+  <body>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta http-equiv="cleartype" content="on">
+    <header class="masthead">
+      <div class="masthead-inner">
+        <h1>{{ site.title }}</h1>
+        <p class="lead">{{ site.description }}</p>
 
-    {% if site.highlighter %} <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type='text/css'> {% endif %}
-    <link rel="stylesheet" href="{{ site.url }}/css/main.css" type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
-
-</head>
-
-<body>
-    <header id="top" class="main-header">
-
-        <div class="module title color-1">
-            <h1><a href="{{ site.url }}/">{{ site.name }}</a></h1>
+        <div class="colophon">
+          <ul class="colophon-links">
+            <li>
+              <a href="https://github.com/mdo/hyde/archive/v{{ site.version }}.zip">Download</a>
+            </li>
+            <li>
+              <a href="https://github.com/mdo/hyde">GitHub project</a>
+            </li>
+            <li>Currently v{{ site.version }}</li>
+          </ul>
+          <p>&copy; 2014. {{ site.author.name }} All rights reserved.</p>
         </div>
-
-        <div class="module description color-2">
-            {{ site.description }}
-        </div>
-
-        <nav class="module main-menu color-4">
-            <a href="{{ site.url }}/">Home</a>
-            <a href="{{ site.url }}/about/">About</a>
-            <a href="{{ site.url }}/contact/">Contact</a>
-        </nav>
-
-        <div class="module links color-3">
-            <a href="https://github.com/{{ site.github }}" title="Profile in Github" target="_blank">github</a>
-            <a href="https://twitter.com/{{ site.twitter }}" title="Profile in Twitter" target="_blank">twitter</a>
-            <a href="https://plus.google.com/{{ site.google }}" title="Profile in Google+" target="_blank">Google+</a>
-            <a href="{{ site.url }}/feed.xml" title="Suscribe to RSS" target="_blank">rss</a>
-        </div>
-
+      </div>
     </header>
 
-    {{ content }}
+    <div class="content container">
+      {{ content }}
+    </div>
 
-    {% include footer.html %}
-
-</body>
+  </body>
 </html>
