--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 
-<div class="main-content">
-<article class="module color-3">
-        <h1>{{ page.title }}</h1>
-        <hr>
-        {{ content }}
-</article>
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
+</div>
