--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,56 +2,24 @@
 layout: default
 ---
 
-<div class="main-content">
-
-    <article class="module color-3">
-        <h1>{{ page.title }}{{ .shortUrl }}</h1>
-        <hr>
-        {{ content }}
-        <p class="top"><small><a href="#top">[top]</a></small></p>
-    </article>
-
-
-    <div class="social module">
-        <ul>
-
-            {% capture url %}{{ site.url }}{{ page.url }}{% endcapture %}
-
-            {% if page.shortUrl != null %}
-                {% assign url = page.shortUrl %}
-            {% endif %}
-
-            {% assign tagStr = '' %}
-            {% for tag in page.tags %}
-                {% capture tagStr %}{{ tagStr }}{{ tag }},{% endcapture %}
-            {% endfor %}
-
-            <li class="fb">
-            <a target="_blank" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?t={{ page.title }}&u={{ url }}">Facebook</a></li>
-            <li class="tw"><a target="_blank" title="Share on Twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ url }}&via={{ site.twitter }}&hashtags={{ tagStr }}">Twitter</a></li>
-            <li class="gp"><a target="_blank" title="Share on Google+" href="https://plus.google.com/share?url={{ url }}">Google+</a></li>
-        </ul>
-    </div>
-
-{% if site.disqus-id %}
-<div class="module color-3">
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            var disqus_shortname = '{{ site.disqus-id }}';
-            (function () {
-                var dsq = document.createElement('script');
-                dsq.type = 'text/javascript';
-                dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript"> comments.</a></noscript>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by<span class="logo-disqus">Disqus</span></a>
-</div>
-{% endif %}
-
+<div class="post">
+  <h1>{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
+  {{ content }}
 </div>
 
-
-
+<div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
