--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,33 +1,14 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+{% include header.html %}
 
-  {% include head.html %}
-
-  <body>
-
-    <header class="masthead">
-      <div class="masthead-inner">
-        <h1>{{ site.title }}</h1>
-        <p class="lead">{{ site.description }}</p>
-
-        <div class="colophon">
-          <ul class="colophon-links">
-            <li>
-              <a href="https://github.com/mdo/hyde/archive/v{{ site.version }}.zip">Download</a>
-            </li>
-            <li>
-              <a href="https://github.com/mdo/hyde">GitHub project</a>
-            </li>
-            <li>Currently v{{ site.version }}</li>
-          </ul>
-          <p>&copy; 2014. {{ site.author.name }} All rights reserved.</p>
+<div class="container container-left">
+    <div class="row">
+        <div class="col-md-3 hidden-xs">
+            {% include sidebar.html %}
         </div>
-      </div>
-    </header>
-
-    <div class="content container">
-      {{ content }}
+        <div class="col-md-9">
+            {{ content }}
+        </div>
     </div>
+</div>
 
-  </body>
-</html>
+{% include footer.html %}
